# glyco-data-cleaning-logic

./: .gitignore  Makefile  README.md  pyproject.toml
common/: constants.py  logger.py  utils.py
data/raw/: README.md
notebooks/: analysis.ipynb  analysis.py  main.ipynb  processing.ipynb
reports/csv_misc/: README.md
reports/csv_misc/PXD035158/: rows_duplication_investigation.md
reports/csv_misc/PXD044641/: overlap_peptide_with_ref_project.txt
reports/logs/PXD035158/: app.log.2025-03-23  app.log.2025-04-01  app.log.2025-04-02
reports/logs/scripts/: app.log.2025-03-23  app.log.2025-03-24
reports/ptms/: identified_glyco_ptms_with_5_examples.csv  identified_n_glycosylation_ptms_with_5_examples.csv  identified_ptms_with_5_examples.csv  residue_remapping_config.json  residue_remapping_config.yaml
scripts/: Makefile  README.md  generate_mapping_configs.ipynb  identify_ptms.ipynb  identify_ptms.py  residue_mass_mapping_config.json  residue_mass_mapping_config.yaml  tests.py
